--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             We chose to use the Million Song Dataset to obtain songs and metrics related to those songs.  Taking the user's inputted data, we filter songs within a margin of error of the desired bpm.  If the user desires to do interval training, we select songs with a bpm both noticeably higher and noticeably lower than the desired to indicate periods of high intensity and cool down, respectively.  The songs are then trimmed and concatenated to create one audio file of the desired duration.  We tested our software with various input bpm values to gauge if the software selected appropriate songs.  Success was indicated by an outputted audio file of approximately the correct duration with songs fitting the desired workout profile.
         </p>
 
-        <p id="aboutParagraph" style="color:red; background-color:black">
+        <p id="aboutParagraph">
             We are still finishing up the software, so we have yet to obtain any results.  Stay tuned for updates.
         </p>
 
