--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
             <br/>
         </p>
         <p id="contact" style="padding-left:5em">
-            Joe:&nbsp;&nbsp;&nbsp; JosephHarris2016@u.northwestern.edu
-            <br/> Nick: &nbsp;NicholasRoy2016@u.northwestern.edu
+            Joe:&nbsp;&nbsp;&nbsp; <strong>JosephHarris2016@u.northwestern.edu</strong>
+            <br/> Nick: &nbsp;<strong>NicholasRoy2016@u.northwestern.edu</strong>
         </p>
 
     </div>
