updatescd Desktop/Github/EECS352/cd Desktop/Github/EECS352/cd Desktop/Github/EECS352/

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </p>
 
         <p id="aboutParagraph">
-            We are still finishing up the software, so we have yet to obtain any results.  Stay tuned for updates.
+            We are still finishing up the software, so we have yet to obtain any results.  To that end, we do not have a pretty picture that illustrates our work as of yet, but we will be having a page dedicated to results, analysis, etc. within the next week or so.  Stay tuned for updates.
         </p>
 
     </div>
