--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         <b>Determining a Running Playlist Based on <br/>
             Preferred Pace and Song Tempo</b>
     </h1>
-    <h2 id="names">A <i>Joe Harris</i> and <i>Nick Roy</i> Project</h2>
+    <h2 id="names">A <i>Joe Harris</i> and <i>Nick Roy</i> Collaboration</h2>
 
     <div class="verticalPadding"></div>
 
