Added Results and updates

--- a/results.html
+++ b/results.html
@@ -17,8 +17,8 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
-            <li class="active"><a href="#.html">About</a></li>
-            <li><a href="results.html">Results</a></li>
+            <li><a href="#.html">About</a></li>
+            <li class="active"><a href="#.html">Results</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -37,19 +37,23 @@
 
     <div class="col-xs-1"></div>
 
-    <h1 id="aboutTitle">About</h1>
+    <h1 id="aboutTitle">Results</h1>
 
     <div class="col-xs-1"></div>
     <div class="aboutParagraph">
         <p id="aboutParagraph">
-            There has been significant research into the affect of listening to music while exercising. Findings reveal that listening to music with a representative tempo yields in increased motivation and productivity, as well as an increase in stamina. We are aiming to make the process of selecting music for a running workout easier by taking a user's stride length and desired pace and then providing a playlist to motivate and enhance the workout. The user inputs will be used to calculate what the bpm of the songs should be. Songs will then be chosen according to bpm. The music will ideally be pulled from a user's existing music library, and if not the playlist will be comprised of songs that can be found on Spotify. Listening to the playlist provide while our users are working out will increase their fitness and they will notice greater results.
+            This is a work in progress, and thus we have no results to show.
+            <br> But worry not! for we shall soon have all the requisite elements for this "Results" section, including, but not limited to:
         </p>
+        <div>
+            <ul id="aboutParagraph">
+                <li>A pretty picture to illustrate our work</li>
+                <li>Actual results with thorough analysis</li>
+                <li>Definitive proof that our software accomplishes our goal</li>
+            </ul>
+        </div>
         <p id="aboutParagraph">
-            We chose to use the Million Song Dataset to obtain songs and metrics related to those songs. Taking the user's inputted data, we filter songs within a margin of error of the desired bpm. If the user desires to do interval training, we select songs with a bpm both noticeably higher and noticeably lower than the desired to indicate periods of high intensity and cool down, respectively. The songs are then trimmed and concatenated to create one audio file of the desired duration. We tested our software with various input bpm values to gauge if the software selected appropriate songs. Success was indicated by an outputted audio file of approximately the correct duration with songs fitting the desired workout profile.
-        </p>
-
-        <p id="aboutParagraph">
-            We are still finishing up the software, so we have yet to obtain any results. To that end, we do not have a pretty picture that illustrates our work as of yet, but we will have a completed page dedicated to results, analysis, etc. within the next week or so. Stay tuned for updates.
+            We apologize for the inconvenience as we work to make this page a reality. Please feel free to contact us at the email addresses provide at the bottom of the page with any question or concerns.
         </p>
 
     </div>
@@ -72,6 +76,7 @@
 
     <script src="script.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
