--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="#.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="results.html">Results</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
