--- a/results.html
+++ b/results.html
@@ -42,7 +42,7 @@
     <div class="col-xs-1"></div>
     <div class="aboutParagraph">
         <p id="aboutParagraph">
-            This is a work in progress, and thus we have no results to show.
+            This is a work in progress, and thus we have no conclusive results to show yet.
             <br> But worry not! for we shall soon have all the requisite elements for this "Results" section, including, but not limited to:
         </p>
         <div>
