--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
-            <li><a href="#.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="active"><a href="#.html">Results</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
